customtests/tests/expected/varcopydef1.err
tests/varcopydef1.scala:14: error: mutability mismatch:
 found   : AnyRef @readonly(varcopydef1.this.r1)
 required: AnyRef(varcopydef1.this.u2)
	u2 = r1  // should error
             ^
tests/varcopydef1.scala:18: error: mutability mismatch:
 found   : AnyRef @readonly(varcopydef1.this.r1)
 required: AnyRef @mutable(varcopydef1.this.u3)
	u3 = r1  // should error
             ^
tests/varcopydef1.scala:23: error: mutability mismatch:
 found   : AnyRef @readonly(varcopydef1.this.u4)
 required: AnyRef(varcopydef1.this.u1)
	u1 = u4  // should error
             ^
three errors found
